--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
         "stop": "cargo shuttle project stop --working-directory ./backend/"
     },
     "dependencies": {
-        "@next/font": "13.4.12",
-        "@types/node": "20.4.5",
-        "@types/react": "18.2.17",
-        "@types/react-dom": "18.2.7",
-        "next": "13.4.12",
+        "@next/font": "13.4.13",
+        "next": "13.4.13",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "typescript": "5.1.6"
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
         "concurrently": "^8.2.0"
