--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,4 +18,4 @@ shuttle-secrets = "0.23.0"
 tokio = "1.31.0"
 serde_json = "1.0.104"
 tower = { version = "0.4.13", features = ["util"] }
-tower-http = { version = "0.4.3", features = ["fs", "trace"] }
+tower-http = { version = "0.4.3", features = ["fs", "trace", "cors"] }
